Fix greedy register allocation in loops (bug 667132, r=adrake).

--HG--
extra : rebase_source : e8daf95930363a6af23dac2e119ea26305df28c1